# Create-Data-by-Raw

./: README.md
CreateBetterImages/: CMakeLists.txt  main.cpp
CreateBetterImages/include/: contour_worker.h  object.h
